--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "npm": "^10.5.0",
     "pg": "^8.13.0",
     "socket.io": "^4.7.4",
+    "speakeasy": "^2.0.0",
+    "ssh2": "^1.16.0",
     "uuid": "^10.0.0",
     "whatwg-url": "^14.0.0"
   },
