--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
     "uuid": "^10.0.0",
+    "v9u-smb2": "^1.0.6",
+    "webpack": "^5.97.1",
     "whatwg-url": "^14.0.0"
   },
   "name": "apps",
