Migrating to working branch Separating routes from main app.js file Cleaning up code

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # ignore files
 *.lock
 package-lock.json
+microsoft-identity-association.json
 
 # ignore directories
 public/videos/
 node_modules/
 private/
-
-
+31087.0x/
+.clinic/
 
