--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "mkdirp": "^3.0.1",
     "mobile-detect": "^1.4.5",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
-    "nodemailer-openpgp": "^2.0.0",
     "npm": "^10.5.0",
     "pg": "^8.13.0",
     "socket.io": "^4.7.4",
@@ -35,6 +33,7 @@
   "name": "apps",
   "version": "1.0.0",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
