Adding compression support for trying to save page bandwidth Updating packages to include compression

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "compression": "^1.8.1",
     "cropperjs": "^1.6.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -20,9 +21,7 @@
     "mkdirp": "^3.0.1",
     "mobile-detect": "^1.4.5",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.14",
-    "nodemailer-openpgp": "^2.0.0",
-    "npm": "^10.5.0",
+    "npm": "^11.7.0",
     "pg": "^8.13.0",
     "socket.io": "^4.7.4",
     "speakeasy": "^2.0.0",
