--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "compression": "^1.8.1",
+    "connect-redis": "^9.0.0",
     "cropperjs": "^1.6.2",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "npm": "^11.7.0",
     "pg": "^8.13.0",
+    "redis": "^5.10.0",
     "socket.io": "^4.7.4",
     "speakeasy": "^2.0.0",
     "ssh2": "^1.16.0",
